--- a/visualization-app/package.json
+++ b/visualization-app/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "recharts": "^1.8.5"
   },
   "scripts": {
