Compose backend and frontend services with backup data.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
     elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.7.1
+        image: edupilot/backend_es:latest
         environment:
             - discovery.type=single-node
             - cluster.name=docker-cluster
@@ -12,12 +12,24 @@ services:
             context: .
         ports:
             - "9200:9200"
-        expose: 
+        expose:
             - "9200"
         tty: true
-        networks: 
+        networks:
+            - app
+    # You may remove the backup_loader container 
+    # once downloading the backup is done:
+    backup_loader:
+        image: edupilot/backup_loader:latest
+        depends_on:
+            - elasticsearch
+        build:
+            dockerfile: Dockerfile
+            context: ./load_backup
+        networks:
             - app
     frontend:
+        image: edupilot/frontend:latest
         build:
             dockerfile: Dockerfile
             context: ./visualization-app
